# forged-client-rust

./: Cargo.toml  LICENSE-MIT  README.md  schema.graphql
.github/workflows/: cli.yml  gen-release.yml  rust-client.yml
forged-cli/: CHANGELOG.md  Cargo.toml  Makefile.toml  Readme.md
forged-cli/src/: cli.rs  functions.rs  main.rs  queries.rs
forged-cli/src/functions/: attach.rs  block.rs  download.rs  end.rs  log.rs  start.rs
forged-cli/wix/: main.wxs
forged-py/: CHANGELOG.md  README.md  pyproject.toml
forged-py/examples/: get_all_devices.py
forged-py/forged/: client.py
forged-rs/: CHANGELOG.md  Cargo.toml  schema.graphql
forged-rs/src/: blocks.rs  chips.rs  client.rs  error.rs  lib.rs
