[package]
name = "forged-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "1.0.0", features = ["reqwest"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
forged = { path = "../forged-rs" }
serde_json = "1.0.75"
clap = { version = "3.0.13", features = ["derive"] }
probe-rs = "0.12.0"
log = "0.4.14"
anyhow = "1.0.53"
probe-rs-cli-util = "0.12.0"
thiserror = "1.0.30"
dotenv = "0.15"
uuid = { version = "1", features = ["serde"] }
