[package]
name = "forged-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
    "Noah Hüsser <noah@huesser.dev",
]
description = "Command-line interface for forged.dev and device provisioning processes"
homepage = "https://forged.dev"
repository = "https://github.com/forged-org/forged-client-rust"
categories = ["command-line-utilities", "database", "development-tools", "embedded"]
keywords = ["forged", "cli", "hardware", "provision"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "1.0.0", features = ["reqwest"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
forged = { path = "../forged-rs" }
serde_json = "1.0.75"
clap = { version = "3.0.13", features = ["derive"] }
probe-rs = "0.13.0"
log = "0.4.14"
anyhow = "1.0.53"
probe-rs-cli-util = "0.13.0"
thiserror = "1.0.30"
dotenv = "0.15"
uuid = { version = "1", features = ["serde"] }
