[package]
name = "forged-cli"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = [
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
    "Noah Hüsser <noah@huesser.dev",
]
description = "Command-line interface for forged.dev and device provisioning processes"
homepage = "https://forged.dev"
repository = "https://github.com/forged-org/forged-clients"
categories = ["command-line-utilities", "database", "development-tools", "embedded"]
keywords = ["forged", "cli", "hardware", "provision"]

[package.metadata.wix]
upgrade-guid = "854A6FE8-DD98-4FCD-91F6-DA5FD5338557"
path-guid = "F38504B1-B27C-41FD-ADB0-EF523A3950E7"
license = false
eula = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "2", features = ["http-reqwest"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
forged = { version = "0.4", path = "../forged-rs" }
serde_json = "1.0.75"
clap = { version = "3.0.13", features = ["derive"] }
indicatif = "0.17"
probe-rs = "0.22.0"
log = "0.4.14"
anyhow = "1.0.53"
thiserror = "1.0.30"
dotenv = "0.15"
uuid = { version = "1", features = ["serde"] }
semver = "1"
