[package]
name = "forged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cynic = { version = "1.0.0", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0.75"
serde = "1"
anyhow = "1.0.53"
thiserror = "1.0.30"
