[package]
name = "forged"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
    "Noah Hüsser <noah@huesser.dev",
]
description = "Client API for forged.dev and device provisioning processes"
homepage = "https://forged.dev"
repository = "https://github.com/forged-org/forged-clients"
categories = ["command-line-interface", "database", "development-tools", "embedded"]
keywords = ["forged", "api", "client", "hardware", "provision"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cynic = { version = "1.0.0", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0.75"
serde = "1"
anyhow = "1.0.53"
thiserror = "1.0.30"
